--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -17,7 +17,7 @@
             <!-- <a class="dropdown-item" href="wishlist.html">Wishlist</a>
             <a class="dropdown-item" href="product-single.html">Single Product</a> -->
             <a class="dropdown-item" routerLink="/cart">Cart</a>
-            <a class="dropdown-item" routerLink="/checkout">Checkout</a>
+            <!-- <a class="dropdown-item" routerLink="/checkout">Checkout</a> -->
             <a class="dropdown-item" routerLink="/myorders">Orders</a>
           </div>
         </li>
