--- a/src/app/Components/shop/checkout/checkout.component.html
+++ b/src/app/Components/shop/checkout/checkout.component.html
@@ -12,7 +12,7 @@
 <section *ngIf="!isLoading" class="ftco-section">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-xl-7 ftco-animate">
+      <!-- <div class="col-xl-7 ftco-animate">
         <form action="#" class="billing-form">
           <h3 class="mb-4 billing-heading">Billing Details</h3>
           <div class="row align-items-end">
@@ -93,8 +93,9 @@
               </div>
             </div>
           </div>
-        </form><!-- END -->
-      </div>
+        </form>
+      </div> -->
+
       <div class="col-xl-5">
         <div class="row mt-5 pt-3">
           <div class="col-md-12 d-flex mb-5">
